WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255063
When the WP crashes, some pages also crash the GPUP under RemoteMediaSourceProxy::~RemoteMediaSourceProxy()
https://bugs.webkit.org/show_bug.cgi?id=255063
Summary
When the WP crashes, some pages also crash the GPUP under RemoteMediaSourcePr...
Jean-Yves Avenard [:jya]
Reported
2023-04-05 16:16:13 PDT
When the content process crashes, the GPU process could crash in RemoteMediaSourceProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2023-04-05 16:16:29 PDT
rdar://107668734
Jean-Yves Avenard [:jya]
Comment 2
2023-04-05 16:20:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12436
EWS
Comment 3
2023-04-06 13:49:46 PDT
Committed
262683@main
(00e79561e9f0): <
https://commits.webkit.org/262683@main
> Reviewed commits have been landed. Closing PR #12436 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug