When the WP crashes, some pages also crash the GPUP under RemoteMediaSourceProxy::~RemoteMediaSourceProxy() https://bugs.webkit.org/show_bug.cgi?id=255063 rdar://107668734

Reviewed by Tim Horton.

Ensure that the connection to the CP is valid before attempting to send
a message.

* Source/WebKit/GPUProcess/media/RemoteMediaSourceProxy.cpp:
(WebKit::RemoteMediaSourceProxy::~RemoteMediaSourceProxy):
* Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp:
(WebKit::RemoteSourceBufferProxy::~RemoteSourceBufferProxy):
* Source/WebKit/WebProcess/GPU/media/MediaSourcePrivateRemote.cpp:
(WebKit::MediaSourcePrivateRemote::addSourceBuffer):
(WebKit::MediaSourcePrivateRemote::markEndOfStream):
(WebKit::MediaSourcePrivateRemote::unmarkEndOfStream):

Canonical link: https://commits.webkit.org/262683@main